--- a/index.html
+++ b/index.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/x-icon" href="img/cjc.png">
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>CJCRSG</title>
 </head>
 <body>
-    <h1>hello world</h1>
+    <header>
+        <li class="logo-img"><a href="index.html"><img src="img/cjc.png" alt="logo"></a></li>
+        <div class="logo">Church of Jesus Christ the Risen Son of God Phils. Inc</div>
+        <input type="checkbox" id="nav_check" hidden>
+        <nav>
+            <ul>
+                <li>
+                    <a href="aboutUs.html">About Us</a>
+                </li>
+                <li>
+        </nav>
+        <label for="nav_check" class="hamburger">
+            <div></div>
+            <div></div>
+            <div></div>
+        </label>
+    </header>
+        <h1 class="wel">Welcome Admin!</h1>
+    <h2 class="con">You need to Log In to continue <br> the access.</h2>
+    <h4 class="dir">You will be directed to the attendance monitoring.</h4>
+    
+    <div class="wrapper">
+        <h3>Login</h3>
+        <form id="login-form" action="db.php" method="POST">
+          <div class="field email">
+              <div class="input-area">
+                  <input type="text" name="email" placeholder="Email Address">
+                  <i class="icon fas fa-envelope"></i>
+                  <i class="error error-icon fas fa-exclamation-circle"></i>
+              </div>
+              <div class="error error-txt">Email can't be blank</div>
+          </div>
+          <div class="field password">
+              <div class="input-area">
+                  <input type="password" name="password" placeholder="Password">
+                  <i class="icon fas fa-lock"></i>
+                  <i class="error error-icon fas fa-exclamation-circle"></i>
+              </div>
+              <div class="error error-txt">Password can't be blank</div>
+          </div>
+          <input type="submit" value="Login">
+      </form>
+      </div>
+      <script src="js/login.js"></script>
 </body>
 </html>
