change folder name

--- a/record.html
+++ b/record.html
@@ -97,7 +97,7 @@
     $(function () {
         async function getAttendance() {
             try {
-                let response = await fetch("http://localhost/cjc0/php/db.php");
+                let response = await fetch("http://localhost/project/php/db.php");
                 let responseData = await response.json();
                 console.log(responseData);
 
