--- a/Dashboard.html
+++ b/Dashboard.html
@@ -124,7 +124,7 @@
 $(function () {
     async function getUsers() {
         try {
-            let response = await fetch("http://localhost/cjc0/php/db.php", {
+            let response = await fetch("http://localhost/project/php/db.php", {
                 method: 'GET'
             });
             let responseData = await response.json();
