--- a/member.html
+++ b/member.html
@@ -199,7 +199,7 @@
         // Function to fetch users
         async function getUsers() {
             try {
-                let response = await fetch("http://localhost/cjc0/php/db.php", {
+                let response = await fetch("http://localhost/project/php/db.php", {
                     method: 'GET'
                 });
                 let responseData = await response.json();
