--- a/aboutUs.html
+++ b/aboutUs.html
@@ -28,7 +28,7 @@
     </header>
 
     <h1 class="wel">Mission & Vision</h1>
-    <h4 class="dir">Introducing our church organization, where our guiding principle is "Gospel First." Inspired by Luke 9:6 (AMP),q 
+    <h4 class="dir">IIntroducing our church organization, where our guiding principle is "Gospel First." Inspired by Luke 9:6 (AMP),q 
       <br> we prioritize spreading the Gospel and healing the sick in every community we touch. Through passionate preaching 
       <br> and compassionate care, we emulate Christ's ministry, bringing hope and transformation wherever we go.</h4>
 
